books/src/styles/mainpage.css
	#app {
		display: flex;
		min-height: 100vh;
		min-width: 100vw;
	}

	.header-container {
	    display: flex;
    	flex-direction: column;
    	align-items: center;	
	}

	h1, h2 {
		font-family: 'Indie Flower', cursive;
		font-size: xxx-large;
		color: rgb(117, 72, 20);
		background-color: rgb(219, 204, 186);
		border-radius: 20px;
		margin: 10%;
		border-style: dashed;
		border-width: 5px;
	}

	.left {
		display: flex;
		flex-direction: column;
		align-items: center;
		width: 30%; /* Adjust the width as needed */
		background-image: url('/books.jpg');
	}
	
	.right {
		flex: 1;
	}

	.search {
		padding: 25px;
		text-align: center;
	}
	input {
		border-radius: 15px;
		border-color: rgb(133, 105, 29);
		padding: 1%;
		font-family: 'Montserrat', sans-serif;
		width: 80%;
		text-align: center;
	}

	button {
		background-color: transparent;
		border: none;
		cursor: pointer;
	}

	.book-container {
		display: grid;
		grid-template-columns: repeat(3, minmax(200px, 0.5fr));
		grid-gap: 30px;
		padding: 5%;
	}

	.book-item {
		background-color: rgb(252, 247, 241);
		border-radius: 20px;
		padding: 5%;
		text-align: center;
		font-family: 'Montserrat', sans-serif;
	}

	#tooltip {
		position: relative;
		display: block;
	}

	#tooltip #tooltiptext {
		visibility: hidden;
		width: 75%;
		height: auto;
		background-color: rgb(250, 250, 250);

		padding: 2%;
		color: #000000;
		text-align: center;
		text-align: left;
		font-size: small;
		font-family: 'Montserrat', sans-serif;

		border-radius: 20px;
		border-style: solid;
		border-width: 5px;
		border-color: rgb(117, 72, 20);

		position: absolute;
		z-index: 1;
		top: 5px;
		left: 102%;
	}

	#tooltip:hover #tooltiptext {
		visibility: visible;
	}

	.title {
		margin-bottom: 0%;
		font-weight: 1000;
	}

	.desc {
		text-align: left;
		font-size: small;
	}
	.author {
		font-size: small;
		font-style: italic;
	}

